--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,3 @@
 GIN_MODE=release
 DB_DRIVER=postgres
-DB_SOURCE=postgres://admin:secretpassword@localhost:5432/swift_db?sslmode=disable
+DB_SOURCE=postgres://admin:secretpassword@postgres:5432/swift_db?sslmode=disable
